k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-timetracker
  namespace: timetracker
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - timetracker-backend.datafortress.cloud
    - timetracker.datafortress.cloud
    secretName: tls-secret
  rules:
  - host: timetracker-backend.datafortress.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: timetracker-backend-service
            port:
              number: 8000
  - host: timetracker.datafortress.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: timetracker-frontend-service
            port:
              number: 80
